--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,9 +11,11 @@ import Body from "$lib/components/Body.astro";
   <p>Again, Fallen is my GitHub username.</p>
 
   <p>
-    I'm an under graduate CS student completing B.Tech from RCC Institute of
-    Infornation Technology college. This is my final year and will be pass out
-    after July 2024.
+    <span>
+      I'm an under graduate CS student completing B.Tech from RCC Institute of
+      Infornation Technology college. This is my final year and will be pass out
+      after July 2024.
+    </span>
   </p>
 
   <p>
