--- a/src/global.css
+++ b/src/global.css
@@ -1,29 +1,17 @@
-@import url('/css/clash-display.css');
-@import url('/css/satoshi.css');
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-  font-family: 'ClashDisplay-Medium';
-  letter-spacing: 0.875px;
-}
+@import url('./fonts.css');
 
 html {
   scroll-behavior: smooth;
   scroll-padding-top: var(--typography-spacing-vertical);
+  font-family: Satoshi, sans-serif;
 }
 
-body {
-  font-family: 'Satoshi-Medium';
-  letter-spacing: 0.5px;
-}
 
 button,
 a[role="button"] {
   padding: 0.25rem 0.875rem;
   font-size: 0.875rem;
+  font-weight: 400;
 }
 
 button.chip,
@@ -32,13 +20,29 @@ a[role="button"].chip {
 }
 
 article:not([data-unset]) {
-  margin-block: 0;
+  margin-block: var(--block-spacing-vertical);
   padding: var(--spacing);
-  display: grid;
 }
 
-#prose>#md :is(h1, h2, h3) {
-  --typography-spacing-vertical: calc(var(--spacing) * 2);
+#content article {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+
+#content article>div:first-of-type {
+  overflow: hidden;
+}
+
+#content {
+  display: grid;
+  gap: var(--spacing);
+}
+
+#prose>#md :is(h1, h2, h3, h4) {
+  margin-bottom: calc(var(--spacing) * 2);
 }
 
 #prose {
@@ -47,19 +51,14 @@ article:not([data-unset]) {
 }
 
 #prose>#toc {
+  height: fit-content;
   margin-bottom: 3rem;
-}
-
-#prose>#toc>a {
-  display: block;
-  margin-bottom: 0.75rem;
-  text-decoration: none;
 }
 
 #bottom-navigation {
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: var(--block-spacing-vertical);
   justify-content: space-between;
 }
 
@@ -72,16 +71,19 @@ article:not([data-unset]) {
 }
 
 figure#hero {
-  width: fit-content;
+  width: 100%;
   height: 100%;
-  max-height: 600px;
+  max-height: 200px;
+}
+
+figure#hero>img {
+  display: block;
   margin-inline: auto;
 }
 
-
 /* Media quries */
 @media screen and (min-width: 768px) {
-  .content {
+  #content {
     grid-template-columns: repeat(2, 1fr);
   }
 
@@ -98,24 +100,29 @@ figure#hero {
   #post-title {
     text-align: center;
   }
+
+  figure#hero {
+    max-height: 600px;
+  }
 }
 
 @media screen and (min-width: 992px) {
-  .content {
+  #content {
     grid-template-columns: repeat(3, 1fr);
   }
 
   #prose {
-    grid-template-columns: calc(20vw) 1fr;
+    grid-template-columns: calc(25vw) 1fr;
   }
 
   #prose>#toc {
     position: sticky;
     top: 3rem;
-    height: fit-content;
+    max-height: calc(100vh - 6rem);
+    overflow-y: scroll;
   }
 
-  #prose>#toc>a {
-    font-size: 0.75rem;
+  #prose>#toc a {
+    font-size: 0.8rem;
   }
 }
