--- a/src/lib/components/Body.astro
+++ b/src/lib/components/Body.astro
@@ -21,7 +21,7 @@ const description =
 const title = _title ? `${_title} • ${navTitle}` : navTitle;
 ---
 
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
