--- a/src/lib/components/Posts.astro
+++ b/src/lib/components/Posts.astro
@@ -2,44 +2,61 @@
 import type { CollectionEntry } from "astro:content";
 import { Image } from "astro:assets";
 
-import Date from "$com/Date.astro";
+import Date from "@/Date.astro";
 
-const { posts } = Astro.props;
+const { posts, count } = Astro.props;
 
 interface Props {
-  posts: CollectionEntry<"blogs">[];
+  posts: CollectionEntry<"blog">[];
+  count?: number;
 }
+
+const arr = posts.slice(0, count).sort((a, b) => {
+  const fst = a.data.publishedOn;
+  const snd = b.data.publishedOn;
+
+  if (!fst || !snd) return 0;
+
+  return snd.valueOf() - fst.valueOf();
+});
 ---
 
 <section id="content">
   {
-    posts &&
-      posts.map(({ slug, data: { image, publishedOn, title } }) => (
-        <article>
-          <div>
-            <Image
-              src={image}
-              alt="Poster of the post"
-              height="200"
-              loading="lazy"
-            />
-          </div>
+    arr &&
+      arr.map(async ({ slug, data: { image, publishedOn, title }, render }) => {
+        const rendered = await render();
+        const { minutesRead } = rendered.remarkPluginFrontmatter;
 
-          <hgroup>
-            <h5>{title}</h5>
-            <h6>
-              <small>
-                <Date date={publishedOn} />
-              </small>
-            </h6>
-          </hgroup>
+        return (
+          <article>
+            <div class="img-container">
+              <Image
+                src={image}
+                alt="Poster of the post"
+                height="200"
+                loading="lazy"
+              />
+            </div>
 
-          <div class="link">
-            <a href={"/post/" + slug} role="button">
-              Read &rarr;
-            </a>
-          </div>
-        </article>
-      ))
+            <hgroup>
+              <h5>{title}</h5>
+              <h6>
+                <small>
+                  <Date date={publishedOn} />
+                  &bullet;
+                  {minutesRead}
+                </small>
+              </h6>
+            </hgroup>
+
+            <div class="link">
+              <a href={"/blog/" + slug} role="button">
+                Read &rarr;
+              </a>
+            </div>
+          </article>
+        );
+      })
   }
 </section>
