minor test to see if i can show images

--- a/src/lib/components/Date.astro
+++ b/src/lib/components/Date.astro
@@ -1,6 +1,11 @@
 ---
 import { formatDate } from "$lib/utils";
 
+interface Props {
+  date: Date | string;
+  text?: string;
+}
+
 const { date, text } = Astro.props;
 ---
 
